--- a/m2/jain-sip-ri/pom.xml
+++ b/m2/jain-sip-ri/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>jain-sip-ri</artifactId>
-	<version>1.2.X-SNAPSHOT</version>
+	<version>7.0.0-TelScale-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>jain-sip-ri</name>
