--- a/m2/pom.xml
+++ b/m2/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>javax.sip</groupId>
 	<artifactId>jain-sip</artifactId>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.0</version>
 
 	<packaging>pom</packaging>
 
