--- a/m2/jain-sip-sctp/pom.xml
+++ b/m2/jain-sip-sctp/pom.xml
@@ -105,7 +105,7 @@
     <dependency>
       <groupId>javax.sip</groupId>
       <artifactId>jain-sip-api</artifactId>
-      <version>1.2.0</version>
+      <version>1.2.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
