Moving towards continous delivery

--- a/m2/jain-sip-ri/pom.xml
+++ b/m2/jain-sip-ri/pom.xml
@@ -79,6 +79,27 @@
 				        </execution>
 				    </executions>
 			</plugin>
+			<plugin>
+                              <groupId>org.sonatype.plugins</groupId>
+                              <artifactId>nexus-staging-maven-plugin</artifactId>
+                              <version>1.6.2</version>
+                              <extensions>true</extensions>
+                              <configuration>
+                                <serverId>telscale-releases-repository</serverId>
+                                <nexusUrl>http://telestax.artifactoryonline.com</nexusUrl>
+                              </configuration>
+                              <executions>
+                                <execution>
+                                    <id>deploy-to-sonatype</id>
+                                    <phase>deploy</phase>
+                                    <goals>
+                                        <goal>deploy</goal>
+                                        <!--goal>close</goal-->
+                                        <goal>release</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                        </plugin>
 		</plugins>
 		<resources>
 			<resource>
