--- a/m2/android-jain-sip-ri/pom.xml
+++ b/m2/android-jain-sip-ri/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>android-jain-sip-ri</artifactId>
-	<version>1.2.X-SNAPSHOT</version>
+	<version>7.0.3-TelScale-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>android-jain-sip-ri</name>
@@ -70,7 +70,7 @@
 				        </execution>
 				    </executions>
 			</plugin>
-			<plugin>
+			<!--plugin>
 			      <groupId>org.sonatype.plugins</groupId>
 			      <artifactId>nexus-staging-maven-plugin</artifactId>
 			      <version>1.6.2</version>
@@ -85,12 +85,11 @@
 				    <phase>deploy</phase>
 				    <goals>
 					<goal>deploy</goal>
-					<!--goal>close</goal-->
 					<goal>release</goal>
 				    </goals>
 				</execution>
 			    </executions>
-			</plugin>
+			</plugin-->
 		</plugins>
 		<resources>
 			<resource>
