--- a/m2/android-jain-sip-ri/pom.xml
+++ b/m2/android-jain-sip-ri/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>android-jain-sip-ri</artifactId>
-	<version>1.2.X-SNAPSHOT</version>
+	<version>1.2.228</version>
 	<packaging>jar</packaging>
 
 	<name>android-jain-sip-ri</name>
