--- a/m2/jain-sip-ri/pom.xml
+++ b/m2/jain-sip-ri/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>jain-sip-ri</artifactId>
-	<version>1.2.233.jdk6</version>
+	<version>1.2.234</version>
 	<packaging>jar</packaging>
 
 	<name>jain-sip-ri</name>
