--- a/m2/jain-sip-ri/pom.xml
+++ b/m2/jain-sip-ri/pom.xml
@@ -9,6 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
+    <groupId>javax.sip</groupId>
 	<artifactId>jain-sip-ri</artifactId>
 	<version>7.0.3-TelScale-SNAPSHOT</version>
 	<packaging>jar</packaging>
