--- a/m2/jain-sip-ri/pom.xml
+++ b/m2/jain-sip-ri/pom.xml
@@ -70,6 +70,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.8.1</version>
+				<configuration><excludePackageNames>test.*:examples.*:performance.*:android.*</excludePackageNames></configuration>
 				<executions>
 				        <execution>
 				            <id>attach-javadocs</id>
