--- a/m2/jain-sip-ri/pom.xml
+++ b/m2/jain-sip-ri/pom.xml
@@ -19,18 +19,40 @@
 	<build>
 		<sourceDirectory>../../src</sourceDirectory>
 		<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>1.6</version>
+                <configuration>
+                    <createDependencyReducedPom>true</createDependencyReducedPom>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                        </filter>
+                    </filters>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>                        
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<includes>
 						<include>gov/nist/javax/sip/**</include>
 						<include>gov/nist/javax/sdp/**</include>
 						<include>gov/nist/core/**</include>
 						<include>javax/sdp/**</include>
+                                                <include>io/**</include>
 					</includes>
 					<excludes>
 						<exclude>gov/nist/javax/sip/stack/sctp/**</exclude>
@@ -66,7 +88,7 @@
 					</archive>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.8.1</version>
@@ -81,7 +103,7 @@
 				        </execution>
 				    </executions>
 			</plugin>
-			<!--plugin>
+			plugin>
                               <groupId>org.sonatype.plugins</groupId>
                               <artifactId>nexus-staging-maven-plugin</artifactId>
                               <version>1.6.2</version>
@@ -159,6 +181,19 @@
 			<version>1.2.0</version>
 			<scope>provided</scope>
 		</dependency>
+                <dependency>
+                  <groupId>io.netty</groupId>
+                  <artifactId>netty-all</artifactId>
+                  <version>4.1.0.Beta6</version>
+                  <scope>compile</scope>
+                </dependency>                
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>provided</scope>
+		</dependency>
+                
 	</dependencies>
 
 	<!-- repositories -->
