--- a/m2/jain-sip-ri/pom.xml
+++ b/m2/jain-sip-ri/pom.xml
@@ -18,6 +18,15 @@
 	<url>http://code.google.com/p/jain-sip/</url>
 	<build>
 		<sourceDirectory>../../src</sourceDirectory>
+                <testSourceDirectory>../../test</testSourceDirectory>
+                <testResources>
+                    <testResource>
+                        <directory>../../</directory>
+                        <includes>
+                            <include>tck.properties</include>
+                        </includes>
+                    </testResource>
+                </testResources>                
 		<plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -40,6 +49,16 @@
                     </execution>
                 </executions>
             </plugin>                        
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<includes>
+                                               <include>test/**/*Test.java</include>
+                                       </includes>
+				</configuration>
+			</plugin>	                    
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -88,6 +107,7 @@
 					</archive>
 				</configuration>
 			</plugin>
+
 			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -103,7 +123,9 @@
 				        </execution>
 				    </executions>
 			</plugin>
-			plugin>
+                        -->
+
+			<plugin>
                               <groupId>org.sonatype.plugins</groupId>
                               <artifactId>nexus-staging-maven-plugin</artifactId>
                               <version>1.6.2</version>
@@ -122,7 +144,7 @@
                                     </goals>
                                 </execution>
                             </executions>
-                        </plugin-->
+                        </plugin>
 		</plugins>
 		<resources>
 			<resource>
@@ -187,13 +209,14 @@
                   <version>4.1.0.Beta6</version>
                   <scope>compile</scope>
                 </dependency>                
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.10</version>
 			<scope>provided</scope>
-		</dependency>
-                
+		</dependency>                
+
 	</dependencies>
 
 	<!-- repositories -->
