--- a/m2/jain-sip-ri/pom.xml
+++ b/m2/jain-sip-ri/pom.xml
@@ -209,9 +209,15 @@
                 <dependency>
                   <groupId>io.netty</groupId>
                   <artifactId>netty-all</artifactId>
-                  <version>4.1.0.CR2</version>
+                  <version>4.0.34.Final</version>
                   <scope>compile</scope>
-                </dependency>                
+                </dependency>
+                <dependency>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-transport-native-epoll</artifactId>
+                    <version>4.0.34.Final</version>
+                    <classifier>linux-x86_64</classifier>
+                  </dependency>                                
 
 		<dependency>
 			<groupId>junit</groupId>
