--- a/m2/jain-sip-testsuite/pom.xml
+++ b/m2/jain-sip-testsuite/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>javax.sip</groupId>
     <artifactId>jain-sip-testsuite</artifactId>
-    <version>7.0.3-TelScale-SNAPSHOT</version>
+    <version>1.2.X-SNAPSHOT</version>
     <packaging>jar</packaging>
     <url>http://code.google.com/p/jain-sip/</url>
     <build>
